<resources>
    <string name="app_name">Inventory App</string>
    <string name="add_item">Add item</string>

    <!-- Label for editor menu option to save item and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>


    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_items">Products</string>


    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="category_name">Name</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="category_price">Price</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="category_quantity">Quantity</string>

    <!-- Text hint for supplier name field in the editor [CHAR LIMIT=30] -->
    <string name="category_supplier_name">Supplier Name</string>

    <!-- Text hint for suppler phone field in the editor [CHAR LIMIT=30] -->
    <string name="category_supplier_phone">Supplier Phone</string>
    <string name="error_saving">Error with saving item</string>
    <string name="item_saved">Item saved  id:</string>

</resources>